add pick/save functionality

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,7 +65,8 @@ jxl-oxide = "0.2.0"
 [features]
 avif_native = ["avif-decode"]
 dav1d = ["libavif-image"]
-default = ["turbo", "avif_native", "update", "native_filedialog"]
+# default = ["turbo", "avif_native", "update", "native_filedialog"]
+default = ["turbo", "avif_native", "update"]
 native_filedialog = ["rfd"]
 file_open = ["rfd"]
 turbo = ["turbojpeg"]
