--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,7 +67,7 @@ trash = "3.1"
 lutgen = {version ="0.9.0", features = ["lutgen-palettes"]}
 libheif-rs = { version = "0.22.0", default-features = false, optional = true}
 egui-phosphor = "=0.3.0"
-egui-notify = "0.10.0"
+egui-notify = "=0.10.0"
 ktx2 = "0.3.0"
 wgpu = "0.19"
 thiserror = "1.0.51"
@@ -75,13 +75,14 @@ bitflags = "2.4.1"
 flate2 = "1.0.28"
 ruzstd = "0.5.0"
 basis-universal = "0.3.1"
+egui_file = "=0.11.1"
 
 [features]
 heif = ["libheif-rs"]
 avif_native = ["avif-decode"]
 dav1d = ["libavif-image"]
-default = ["turbo", "file_open", "avif_native", "update"]
-file_open = ["rfd"]
+default = ["turbo", "avif_native", "update"]
+rfd_dialogs = ["rfd"]
 turbo = ["turbojpeg"]
 update = ["self_update"]
 
