--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,7 +64,7 @@ img-parts = "0.3"
 dark-light = "1.0"
 trash = "3.1"
 lutgen = {version ="0.9.0", features = ["lutgen-palettes"]}
-libheif-rs = { version = "0.22.0", default-features = false, optional = true}
+libheif-rs = { version = "0.22.0", optional = true}
 egui-phosphor = "0.4"
 egui-notify = "0.13"
 ktx2 = "0.3.0"
